# My-MLOps-Zoomcamp

./: README.md  homework.ipynb  mlflow.db  model_registry.ipynb  pyproject.toml
.github/: dependabot.yml
.ipynb_checkpoints/: homework-checkpoint.ipynb
running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb
