[project]
name = "my-mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "fahlevi20",email = "rozakalfi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.3.3,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.21.2,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)"
]

[poetry.tool]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
